# reflex-engine

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README.md
App/: CMakeLists.txt
App/assets/: scenes.json
App/src/: Main.cpp  MenuLayer.cpp  MenuLayer.h  SimLayer.cpp  SimLayer.h
Core/: CMakeLists.txt
Core/src/: Application.cpp  Application.h  AssetManager.h  Button.cpp  Button.h  Card.h  Event.h  InputEvents.h  JSONParser.h  Layer.cpp  Layer.h  LayerEvents.h  Utils.h
Core/src/Engine/: Body.h  Collision.h  Engine.cpp  Engine.h  Impulse.h  Math.h
